--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </style>
 <body>
 <h1>магазин пончиків</h1> 
-<img src = "/uploads/2023/02/donut.png">
+<img src = "https://learn.logikaschool.com/uploads/2023/02/donut.png">
 </body>
 </html>
