--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </style>
 <body>
-<h1>магазин пончиків</h1> 
+<h1 style="color:red;">магазин пончиків</h1> 
 <img src = "https://learn.logikaschool.com/uploads/2023/02/donut.png">
 </body>
 </html>
